--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "type": "git",
     "url": "https://github.com/reelyactive/barnowl-test.git"
   },
-  "version": "0.0.0",
+  "version": "0.1.0",
   "dependencies": {
     "barnowl": ">=0.3.0",
-    "node-json2html": ">=0.4.0"
+    "node-json2html": ">=0.4.0",
+    "nedb": ">=0.11.0"
   },
   "keywords": [
     "barnowl",
